fix header, fix date output and misc
